Fix: make external link icons invisible (WIP)

--- a/src/components/ExternalLink/styles.scss
+++ b/src/components/ExternalLink/styles.scss
@@ -2,6 +2,14 @@
 
 a.link-button__inline {
     margin-bottom: $magicNumber / 8;
+
+    .icon {
+        display: none;
+    }
+
+    @media screen and (min-width: $desktop-breakpoint) {
+        display: inline-block;
+    }
 }
 .social-link--wrapper {
     display: flex;
